tests/syntax/invalid/no-open-curly.ama
# <input>:1:4 unexpected token: punct(})
foo}
